fix: fixed annoying header scaling issue. essentially the right side would not collapse when width shrank.

--- a/css/Header.module.css
+++ b/css/Header.module.css
@@ -1,17 +1,18 @@
 .header {
   display: flex;
-  padding: 0.1em 2em;
+  padding: 0.2em 2em;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
   height: auto;
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 1100px;
   background: rgba(255, 255, 255, 0.7);
   border-radius: 4em;
   margin-top: 1em;
   transition: border-color 0.3s ease;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  flex: 1;
 }
 
 .header:hover {
@@ -45,6 +46,9 @@
 .socialLinks {
   flex: 0;
   gap: 1.2em;
+  flex-shrink: 1;
+  justify-content: flex-start;
+  width: 100%;
 }
 
 .social_image {
